# darknet

./: Makefile  darknet.config  darknet.files  darknet.includes
cfg/: cifar-exp.cfg  cifar100-exp-augment.cfg  cifar100-exp-compact.cfg  cifar100-exp-flip.cfg  cifar100-exp-flipaug.cfg  cifar100-exp-shortcut.cfg  cifar100-exp-sidebyside-gap.cfg  cifar100-exp-sidebyside.cfg  cifar100-exp-sideshrinkadd.cfg  cifar100-exp.cfg
src/: augment_layer.c  augment_layer.h  augment_layer_kernels.cu  blas.h  blas_kernels.cu  cgm.c  cifar.c  compact_layer.c  compact_layer.h  compact_layer_kernels.cu  crop_layer.c  crop_layer.h  crop_layer_kernels.cu  darknet.c  data.c  data.h  driver.c  group_layer.c  group_layer.h  image.c  keypoint_layer.c  keypoint_layer.h  keypoint_layer_kernels.cu  layer.h  matrix.c  matrix.h  mnist.c  network.c  network.h  network_kernels.cu  parser.c  route_layer.c  route_layer.h  segment.c  shrinkadd_layer.c  shrinkadd_layer.h  shrinkmax_layer.c  shrinkmax_layer.h  shrinkmax_layer_kernels.cu  sidebyside_layer.c  (+3 more)
tools/: CMakeLists.txt  plot.p  plot_mse.p  plot_test.p  plot_test_mse.p  plot_train.p  preparePlot.cpp
tools/annotate/: CMakeLists.txt  main.cpp
tools/ensemble/: CMakeLists.txt  main.cpp
